--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -163,7 +163,6 @@
     <Compile Include="Areas\Admin\Controllers\MentorsController.cs" />
     <Compile Include="Areas\Admin\Controllers\MenusController.cs" />
     <Compile Include="Areas\Admin\Controllers\NewsController.cs" />
-    <Compile Include="Areas\Admin\Controllers\RoomImagesController.cs" />
     <Compile Include="Areas\Admin\Controllers\RoomInfoesController.cs" />
     <Compile Include="Areas\Admin\Controllers\SubMenusController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -196,6 +195,7 @@
     <Compile Include="Models\AdminAccount.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\AdminAuthenticationFilter.cs" />
     <Compile Include="Models\AdminLogin.cs" />
     <Compile Include="Models\Banner.cs">
       <DependentUpon>Model1.tt</DependentUpon>
